@@ -120,6 +120,11 @@ Working version
 - #10986: Add Scanf.sscanf_opt, Scanf.bscanf_opt and Scanf.scanf_opt.
   (Nicolás Ojeda Bär, review by Florian Angeletti and Gabriel Scherer)
 
+* #11157: Rename "hash" in the "Hashtbl.SeededHashedType" signature to
+  "seeded_hash". This allows defining both seeded and unseeded hash functions in
+  the same module.
+  (Nicolás Ojeda Bär, review by Gabriel Scherer and Xavier Leroy)
+
 ### Other libraries:
 
 * #9071, #9100, #10935: Reimplement `Thread.exit()` as raising the
